--- a/main.html
+++ b/main.html
@@ -1,16 +1,47 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Shaw's News</title>
+    <link rel="stylesheet" href="1.assigment.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <header class="header">
+        <h1>Shaw's News</h1>
+    </header>
+    <div class="container">
+        <div class="latest-news-section">
+            <h3>Latest News Articles</h3>
+            <ul>
+                <li>Article 1</li>
+                <li>Article 2</li>
+                <li>Article 3</li>
+            </ul>
+        </div>
+        <div class="main-article-section">
+            <h2>Main Article</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt ex aspernatur, quam porro in debitis
+                beatae labore saepe mollitia! Voluptatibus reprehenderit molestias ducimus harum ut laudantium nemo
+                numquam cum dolor blanditiis suscipit doloremque beatae a fugit placeat ipsa praesentium, recusandae
+                nobis maiores, sunt in eum quis. Pariatur voluptas dolor in repellat eaque ducimus cupiditate porro
+                facilis officiis numquam assumenda laborum expedita molestias hic a ut, repudiandae eius culpa id saepe
+                obcaecati natus reiciendis? Quia sequi tenetur blanditiis molestias possimus rerum, ad repellendus
+                soluta, quas ipsam quo iste?</p>
+        </div>
+        <div class="pictorial-news-section">
+            <h3>Pictorial News</h3>
+            <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg"
+                alt="Pictorial News 1">
+            <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG"
+                alt="Pictorial News 2">
+            <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG"
+                alt="Pictorial News 3">
+        </div>
+    </div>
 </body>
 
 </html>
